design stuff - fixed the issue with weird letters, font too small - some letters are cut at the bottom - changed the gradient that's applied to poster when hovering - updated the prototype

--- a/assets/master.css
+++ b/assets/master.css
@@ -69,7 +69,7 @@
 }
 
 .fs14 {
-  font-size: 14px;
+  font-size: 14.5px;
 }
 .fs12 {
   font-size: 12px;
